fix: increase font sizes for vehicle info and location text for improved readability

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -65,7 +65,7 @@ body {
 
 .vehicle-info {
   font-family: Arial, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   color: #000000d0;
 }
 
@@ -514,7 +514,7 @@ input:checked + .slider:before {
 .location-text {
     font-family: Arial, sans-serif;
     color: #777;
-    font-size: 10px;
+    font-size: 12px;
   }
 
 .last-updated-text{
